UI: Project Details hero, larger progress, mini-KPIs, approvals tab; supporting styles

--- a/client.html
+++ b/client.html
@@ -44,7 +44,7 @@
       <nav class="breadcrumbs">Home / Client</nav>
 
       <section class="grid grid-3 mt-6">
-        <article class="card card-approve">
+        <article class="card card-approve" data-tooltip="Toggle to simulate approval">
           <h3 style="margin-top:0">Acme Website Revamp</h3>
           <div class="progress"><div class="bar"><span style="--w:48%"></span></div><span class="label">48%</span></div>
           <p class="text-muted">Current Stage: Content Writing</p>
