--- a/reports.html
+++ b/reports.html
@@ -103,7 +103,7 @@
             <h3 style="margin-top:0">Projects Table</h3>
             <a class="btn small" href="assets/csv/reports.csv" download>Export CSV</a>
           </div>
-          <table class="table mt-4">
+          <table class="table compact mt-4">
             <thead><tr><th>Project</th><th>Status</th><th>Progress</th><th>Budgeted</th><th>Logged</th></tr></thead>
             <tbody>
               <tr><td>Acme Website Revamp</td><td><span class="badge ongoing">Ongoing</span></td><td>48%</td><td>240</td><td>10</td></tr>
