--- a/timesheets.html
+++ b/timesheets.html
@@ -44,7 +44,7 @@
       <section id="tab-my" class="tab-panel is-active">
         <div class="card">
           <h2 style="margin-top:0">This Week</h2>
-          <table class="table" aria-label="My weekly timesheet">
+          <table class="table compact" aria-label="My weekly timesheet">
             <thead>
               <tr>
                 <th>Task</th>
@@ -81,6 +81,7 @@
             </tbody>
           </table>
           <div class="mt-4 text-right"><strong>Week Total: 17 hrs</strong></div>
+          <div class="mobile-actionbar mt-4"><a class="btn small" href="assets/csv/timesheets.csv" download>Export CSV</a><a class="btn small ghost" href="#">Clear</a></div>
         </div>
       </section>
 
