Reports: tidy layout, add legend styling and scroll margin; fix Budget vs Actual bar units

--- a/reports.html
+++ b/reports.html
@@ -143,7 +143,7 @@
             <div class="chart-title">Budget vs Actual</div>
             <svg viewBox="0 0 360 120" role="img" aria-label="Budget vs Actual">
               <rect x="30" y="30" width="260" height="18" fill="#E2E8F0" rx="9"/>
-              <rect x="30" y="30" width="10.8%" height="18" fill="#00BFA6" rx="9"/>
+              <rect x="30" y="30" width="11" height="18" fill="#00BFA6" rx="9"/>
               <text x="300" y="44" font-size="12" fill="#334155">10 / 240 hrs</text>
             </svg>
           </div>
